2009-04-10  Dan Bernstein  <mitz@apple.com>

        - skip failures following r42379 until they are addressed by code
          changes or test changes

        * platform/win/Skipped:

2009-04-10  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - revert broken test results that were checked in with r42379, now that
          the regression is fixed

        * platform/mac/fast/text/wide-zero-width-space-expected.checksum:
        * platform/mac/fast/text/wide-zero-width-space-expected.png:
        * platform/mac/fast/text/wide-zero-width-space-expected.txt:

2009-04-10  Adam Roben  <aroben@apple.com>

        Update Windows results for complex-character-based-fallback.html

        Rubber-stamped by Dan Bernstein.

        * platform/win/fast/text/international/complex-character-based-fallback-expected.checksum:
        * platform/win/fast/text/international/complex-character-based-fallback-expected.png:
        * platform/win/fast/text/international/complex-character-based-fallback-expected.txt:
        Updated.

2009-04-09  Dan Bernstein  <mitz@apple.com>

        - remove two files I just checked in by accident

        * platform/mac/fast/events/pointer-events-expected.txt: Removed.
        * platform/mac/fast/events/pointer-events.html: Removed.

2009-04-09  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        - moved some Leopard-and-earlier results into platform/mac-leopard and
          added new results under platform/mac

        * platform/mac-leopard/fast/text/complex-text-opacity-expected.checksum: Copied from LayoutTests/platform/mac/fast/text/complex-text-opacity-expected.checksum.
        * platform/mac-leopard/fast/text/complex-text-opacity-expected.png: Copied from LayoutTests/platform/mac/fast/text/complex-text-opacity-expected.png.
        * platform/mac-leopard/fast/text/complex-text-opacity-expected.txt: Copied from LayoutTests/platform/mac/fast/text/complex-text-opacity-expected.txt.